ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-clone
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing  
spec:
  rules:
  - host: netflix-clone.durgeshsingh.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: add-task
            port: 
              number: 80
